# export-sit-timetable

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
src/: Home.tsx  Main.tsx  ShowResults.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: handlers.rs  helper.rs  lib.rs  main.rs  models.rs  scrap.rs  updater.rs
