[package]
name = "export-sit-timetable"
version = "0.1.0"
description = "A Tauri Home"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "export_sit_timetable_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.8", features = [] }
tauri-plugin-shell = "2.0.0-rc.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
scraper = "0.20.0"
chromiumoxide = {version = "0.7.0", default-features = false, features = ["tokio", "tokio-runtime"]}
tokio = {version = "1.40.0"}
chrono = {version = "0.4.38", features = ["serde"]}
futures = "0.3.30"